Fixed an issue that caused scrollbar to show up when not necessary and be small and distracting

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,15 @@ button {padding: 0; border: none}
     src: url("resources/fonts/renner-medium.otf");
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(90, 90, 90, 0.3);
+}
+
 html {
   -webkit-overflow-scrolling: touch;
   height: 100%;
@@ -55,9 +64,8 @@ a {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 100vw;
-  max-width: 26rem;
-  max-height: 800px;
 }
 
 .pane {
@@ -73,6 +81,7 @@ a {
   flex-flow: column;
   justify-content: center;
   margin: 1rem 0;
+  flex: none;
 }
 
 .left-pane > * {
@@ -139,85 +148,75 @@ img.branding {
 }
 
 .right-pane {
-  //background: linear-gradient(#4ba76d, #5b9b74);
-  //box-shadow: 0px 0px 20px #00000026;
   border-top: 1px solid rgba(0,0,0,0.1);
   overflow-x: hidden;
-  flex: 1;
-}
-
-#back-container {
-  width: 100%;
-  letter-spacing: 0.1rem;
+  overflow-y: overlay;
   position: relative;
-  top: -100%;
-  height: 0px;
-}
-
-.back {
-  display: flex;
-  align-items: center;
-  width: fit-content;
-  line-height: 1;
-  user-select: none;
-}
-
-.arrow-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 2rem;
-  width: 2rem;
-
-}
-
-.back > span {
-  color: white;
-  font-size: 1rem;
-  transform: translateY(.15rem);
-}
-
-.back:hover, .back:focus {
-  cursor: pointer;
-  //background: rgba(0,0,0,0.1);
-  //transform: scale(1.02);
-}
-
-.back:active {
-  color: #EEE;
-  transform: scale(1.04);
-}
-
-.arrow-container > .arrow {
-  transform: rotate(180deg);
+  flex: 1;
+  width: 100%;
 }
 
 .right-pane-inner {
-  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   white-space: nowrap;
-  width: 100%;
+  transition: transform 0.2s, max-height 0.2s;
+
+  position: absolute;
+  width: 300%;
   height: 100%;
-  box-sizing: border-box;
   transform: translateX(-0%);
-  transition: transform 0.2s;
-  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
 }
 
 .dropdown {
-  width: 100%;
-  min-height: 100%;
-  overflow: visible;
-  vertical-align: top;
-  padding: 1rem;
-  padding-top: 3rem;
   box-sizing: border-box;
+  width: 100%;
+  max-height: 100%;
+  height: fit-content;;
+  overflow-x: hidden;
+  overflow-y: overlay;
+
+  padding: 1rem;
   transition: visibility 0.2s;
+
+  flex: 1;
   display: inline-flex;
   flex-direction: column;
   align-items: center;
 }
 
+.back {
+  user-select: none;
+  letter-spacing: 0.1rem;
+  //align-self: flex-start;
+  max-width: 24rem;
+  width: 100%;
+  margin-top: -0.5rem;
+}
+
+.back div {
+  width: fit-content;
+  height: 1em;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.back div:hover, .back div:focus {
+  cursor: pointer;
+}
+
+.back div:active {
+  color: #EEE;
+  background: rgba(0,0,0,0.1);
+}
+
+.back .arrow {
+  transform: rotate(180deg);
+}
+
 .dropdown-option {
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   background: white;
   margin-bottom: 1rem;
   display: flex;
@@ -239,12 +238,12 @@ img.branding {
 }
 
 .dropdown-option:last-child {
-  margin-bottom: 0;
+  //margin-bottom: 0;
 }
 
-.dropdown-option:hover, .dropdown-option:focus {
+.dropdown-option:hover, .dropdown-option:focus-within {
   cursor: pointer;
-  //background-color: #F8F8F8;
+  background-color: #F8F8F8;
   transform: scale(1.02);
   //transform: translateX(-1%);
   transition: transform 0.1s ease-out;
@@ -335,7 +334,7 @@ img.branding {
 .pop-up-container {
   height: fit-content;
   max-height: 95vh;
-  overflow-y: scroll;
+  overflow-y: overlay;
   width: 30rem;
   margin: 1.5rem;
   max-width: 100vw;
@@ -528,10 +527,9 @@ p.pop-up-text:last-child {
   background: #00000020;
 }
 
-@media (min-aspect-ratio: 3/2) {
+@media (min-aspect-ratio: 1/1) {
   #main {
     flex-direction: row;
-    max-width: 1000px;
   }
   .left-pane {
     flex: 1;
@@ -545,7 +543,7 @@ p.pop-up-text:last-child {
     border-left: 1px solid rgba(0,0,0,0.1);
   }
   .dropdown {
-    justify-content: center;
+    //justify-content: center;
   }
 
   .arrow {
